--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 	<title>Whiskey Drop | Taste a new whiskey every month</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -41,14 +43,17 @@
 			<a href="/login">Sign In / Sign Up</a>
 		</div>
 	</nav>
-	<article class="container mt-3">
-    <div class="row d-none d-sm-block">
-    <div class="col-12">
-    <div class="alert alert-warning">
-    <strong>SALE NOW ON!</strong> We've got a sale on. Get a 12-month subscription for the price of 6! <a href="">See here for details!</a>
-    </div>    
-    </div>
-    </div>
+	<div class="container alert-container">
+		<div class="row d-none d-sm-block">
+			<div class="col-12">
+				<div class="alert alert-warning">
+					<strong>SALE NOW ON!</strong> We've got a sale on. Get a 12-month subscription for the price of 6!
+					<a href="">See here for details!</a>
+				</div>
+			</div>
+		</div>
+
+        <div class="callout-container">
 		<!-- Callout -->
 		<div class="row">
 			<div class="col-12">
@@ -63,145 +68,150 @@
 						<small>You must be 18 to sign up to our service. Please, drink responsibly.</small></p>
 				</section>
 			</div>
-		</div>
-		<!-- /.callout -->
-		<hr>
+		</div>		
+	</div>
+    <!-- /.callout -->
+    </div>
 
-		<!-- Quotes -->
-		<section class="quotes">
-			<div class="row">
-				<div class="col-12 my-5">
-					<h2 class="text-uppercase">Quotes:</h2>
-				</div>
+	<!-- Quotes -->
+    <div class="container quotes-container">
+	<section class="quotes">
+		<div class="row">
+			<div class="col-12 my-5">
+				<h2 class="text-uppercase">Quotes:</h2>
 			</div>
-			<div class="row">
+		</div>
+		<div class="row">
+			<div class="col-12 col-md-6">
+				<div class="media">
+					<div class="d-none d-sm-block">
+						<img src="images/girl-image.png" class="rounded-circle mr-3" height="100" width="100">
+                        </div>
+						<div class="media-body">
+							<blockquote class="blockquote">
+								<p>I've been introduced to more than 10 great international whiskeys I never knew
+									about.
+								</p>
+								<p>- Jane Doe</p>
+							</blockquote>
+						</div>
+					</div>
+				</div>
 				<div class="col-12 col-md-6">
 					<div class="media">
 						<div class="d-none d-sm-block">
-							<img src="images/girl-image.png" class="rounded-circle mr-3" height="100" width="100">
+							<img src="images/guy-image.png" class="rounded-circle mr-3" height="100" width="100">
                         </div>
 							<div class="media-body">
 								<blockquote class="blockquote">
-									<p>I've been introduced to more than 10 great international whiskeys I never knew
-										about.
-									</p>
+									<p>I haven't been sober for months!</p>
 									<p>- Jane Doe</p>
 								</blockquote>
 							</div>
 						</div>
 					</div>
-					<div class="col-12 col-md-6">
-						<div class="media">
-							<div class="d-none d-sm-block">
-								<img src="images/guy-image.png" class="rounded-circle mr-3" height="100" width="100">
-                        </div>
-								<div class="media-body">
-									<blockquote class="blockquote">
-										<p>I haven't been sober for months!</p>
-										<p>- Jane Doe</p>
-									</blockquote>
-								</div>
-							</div>
-						</div>
-					</div>
-		</section>
-		<!-- /.quotes -->
-		<hr>
+				</div>
+	</section>
+	</div>
+    <!-- /.quotes -->
 
-		<!-- Features -->
-		<section class="features">
-			<div class="row">
-				<div class="col-12 my-5">
-					<h2 class="text-uppercase">Features:</h2>
+	<!-- Features -->
+    <div class="container features-container">
+	<section class="features">
+		<div class="row">
+			<div class="col-12 my-5">
+				<h2 class="text-uppercase">Features:</h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12 col-md-6 col-lg-4">
+				<div class="feature">
+					<h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1
+						<span class="badge badge-success">NEW!</span></h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+						labore
+						et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+						nisi
+						ut
+						aliquip ex ea commodo consequat.</p>
+					<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-12 col-md-6 col-lg-4">
-					<div class="feature">
-						<h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1 <span class="badge badge-success">NEW!</span></h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore
-							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-							nisi
-							ut
-							aliquip ex ea commodo consequat.</p>
-						<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-					</div>
-				</div>
-				<div class="col-12 col-md-6 col-lg-4">
-					<div class="feature">
-						<h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore
-							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-							nisi
-							ut
-							aliquip ex ea commodo consequat.</p>
-						<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-					</div>
-				</div>
-				<div class="col-12 d-md-none d-lg-block col-lg-4">
-					<div class="feature">
-						<h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-							labore
-							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-							nisi
-							ut
-							aliquip ex ea commodo consequat.</p>
-						<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-					</div>
+			<div class="col-12 col-md-6 col-lg-4">
+				<div class="feature">
+					<h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+						labore
+						et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+						nisi
+						ut
+						aliquip ex ea commodo consequat.</p>
+					<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
 				</div>
 			</div>
-		</section>
-		<!-- /.features -->
-		<hr>
+			<div class="col-12 d-md-none d-lg-block col-lg-4">
+				<div class="feature">
+					<h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+						labore
+						et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+						nisi
+						ut
+						aliquip ex ea commodo consequat.</p>
+					<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+				</div>
+			</div>
+		</div>
+	</section>	
+    </div>
+    <!-- /.features -->
 
-		<!-- Monthly Favourites -->
+	<!-- Monthly Favourites -->
 
-		<section class="monthly-favourites">
-			<div class="row">
-				<div class="col-12 my-5">
-					<h2 class="text-uppercase">Monthly Favourites:</h2>
-				</div>
+	<div class="container favourites-container">
+    <section class="monthly-favourites">
+		<div class="row">
+			<div class="col-12 my-5">
+				<h2 class="text-uppercase">Monthly Favourites:</h2>
 			</div>
-			<div class="row">
-				<div class="col-12">
-					<table class="table">
-						<thead>
-							<tr>
-								<th scope="col">Name</th>
-								<th scope="col">Origin</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>Auchentoshan Three Wood Single Malt Scotch</td>
-								<td>Scotland</td>
-							</tr>
-							<tr>
-								<td>Tomatin Cask-Strength</td>
-								<td>Scotland</td>
-							</tr>
-							<tr>
-								<td>Green Spot Single Pot Irish Still Whiskey</td>
-								<td>Ireland</td>
-							</tr>
-							<tr>
-								<td>Bulleit Bourbon Frontier Whiskey</td>
-								<td>USA</td>
-							</tr>
-							<tr>
-								<td>Penderyn Welsh Malt Whisky</td>
-								<td>Wales</td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				<table class="table">
+					<thead>
+						<tr>
+							<th scope="col">Name</th>
+							<th scope="col">Origin</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>Auchentoshan Three Wood Single Malt Scotch</td>
+							<td>Scotland</td>
+						</tr>
+						<tr>
+							<td>Tomatin Cask-Strength</td>
+							<td>Scotland</td>
+						</tr>
+						<tr>
+							<td>Green Spot Single Pot Irish Still Whiskey</td>
+							<td>Ireland</td>
+						</tr>
+						<tr>
+							<td>Bulleit Bourbon Frontier Whiskey</td>
+							<td>USA</td>
+						</tr>
+						<tr>
+							<td>Penderyn Welsh Malt Whisky</td>
+							<td>Wales</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
-		</section>
-		<!-- /.monthly-favourites -->
-	</article>
+		</div>
+	</section>
+    </div>
+	<!-- /.monthly-favourites -->
 
 	<div class="modal" tabindex="-1" role="dialog" id="signUpModal">
 		<div class="modal-dialog" role="document">
@@ -223,11 +233,11 @@
 							<label for="password">Password</label>
 							<input type="password" class="form-control" id="password" placeholder="Password">
                         </div>
-                        <div class="form-group">
-							<label for="repeatPassword">Repeat Password</label>
-							<input type="password" class="form-control" id="repeatPassword" placeholder="Repeat Password">
+							<div class="form-group">
+								<label for="repeatPassword">Repeat Password</label>
+								<input type="password" class="form-control" id="repeatPassword" placeholder="Repeat Password">
                         </div>
-							<button type="submit" class="btn btn-success">Submit</button>
+								<button type="submit" class="btn btn-success">Submit</button>
 					</form>
 				</div>
 			</div>
