--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<a href="/login">Sign In / Sign Up</a>
 		</div>
 	</nav>
-	<div class="container alert-container">
+	<!-- <div class="container alert-container">
 		<div class="row d-none d-sm-block">
 			<div class="col-12">
 				<div class="alert alert-warning">
@@ -51,166 +51,165 @@
 					<a href="">See here for details!</a>
 				</div>
 			</div>
-		</div>
+		</div>     
+	</div> -->
 
-        <div class="callout-container">
-		<!-- Callout -->
-		<div class="row">
-			<div class="col-12">
-				<section class="callout jumbotron">
-					<h1>The finest whiskeys delivered to your doorstep.</h1>
-					<p class="lead">Sign up today to start receiving the world's best whiskeys every month.
-						<s class="d-none d-sm-inline">£19.99</s>
-						<span class="d-inline d-sm-none"><br></span>
-						<strong><mark>First one is free!</mark></strong></p>
-					<button class="btn btn-success btn-lg" data-toggle="modal" data-target="#signUpModal">Sign Up!</button>
-					<p class="text-muted">
-						<small>You must be 18 to sign up to our service. Please, drink responsibly.</small></p>
-				</section>
+		<div class="container-fluid callout-container">
+			<!-- Callout -->
+			<div class="row">
+				<div class="col-12">
+					<section class="callout jumbotron text-center">
+						<h1 class="jumbotron-header">The finest whiskeys delivered to your doorstep.</h1>
+						<p class="lead">Sign up today to start receiving the world's best whiskeys every month.
+							<s class="d-none d-sm-inline">£19.99</s>
+							<span class="d-inline d-sm-none"><br></span>
+							<strong><mark>First one is free!</mark></strong></p>
+						<p><button class="btn btn-success btn-lg" data-toggle="modal" data-target="#signUpModal">Sign Up!</button></p>
+						<p class="text-muted"><small>You must be 18 to sign up to our service. Please, drink responsibly.</small></p>
+					</section>
+				</div>
 			</div>
-		</div>		
-	</div>
-    <!-- /.callout -->
-    </div>
+		</div>
+		<!-- /.callout -->
 
 	<!-- Quotes -->
-    <div class="container quotes-container">
-	<section class="quotes">
-		<div class="row">
-			<div class="col-12 my-5">
-				<h2 class="text-uppercase">Quotes:</h2>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-12 col-md-6">
-				<div class="media">
-					<div class="d-none d-sm-block">
-						<img src="images/girl-image.png" class="rounded-circle mr-3" height="100" width="100">
-                        </div>
-						<div class="media-body">
-							<blockquote class="blockquote">
-								<p>I've been introduced to more than 10 great international whiskeys I never knew
-									about.
-								</p>
-								<p>- Jane Doe</p>
-							</blockquote>
-						</div>
-					</div>
+	<div class="container quotes-container">
+		<section class="quotes">
+			<div class="row">
+				<div class="col-12 my-5">
+					<h2 class="text-uppercase">Quotes:</h2>
 				</div>
+			</div>
+			<div class="row">
 				<div class="col-12 col-md-6">
 					<div class="media">
 						<div class="d-none d-sm-block">
-							<img src="images/guy-image.png" class="rounded-circle mr-3" height="100" width="100">
+							<img src="images/girl-image.png" class="rounded-circle mr-3" height="100" width="100">
                         </div>
 							<div class="media-body">
 								<blockquote class="blockquote">
-									<p>I haven't been sober for months!</p>
+									<p>I've been introduced to more than 10 great international whiskeys I never knew
+										about.
+									</p>
 									<p>- Jane Doe</p>
 								</blockquote>
 							</div>
 						</div>
 					</div>
-				</div>
-	</section>
+					<div class="col-12 col-md-6">
+						<div class="media">
+							<div class="d-none d-sm-block">
+								<img src="images/guy-image.png" class="rounded-circle mr-3" height="100" width="100">
+                        </div>
+								<div class="media-body">
+									<blockquote class="blockquote">
+										<p>I haven't been sober for months!</p>
+										<p>- Jane Doe</p>
+									</blockquote>
+								</div>
+							</div>
+						</div>
+					</div>
+		</section>
 	</div>
-    <!-- /.quotes -->
+	<!-- /.quotes -->
 
 	<!-- Features -->
-    <div class="container features-container">
-	<section class="features">
-		<div class="row">
-			<div class="col-12 my-5">
-				<h2 class="text-uppercase">Features:</h2>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-12 col-md-6 col-lg-4">
-				<div class="feature">
-					<h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1
-						<span class="badge badge-success">NEW!</span></h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-						labore
-						et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-						nisi
-						ut
-						aliquip ex ea commodo consequat.</p>
-					<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+	<div class="container features-container">
+		<section class="features">
+			<div class="row">
+				<div class="col-12 my-5">
+					<h2 class="text-uppercase">Features:</h2>
 				</div>
 			</div>
-			<div class="col-12 col-md-6 col-lg-4">
-				<div class="feature">
-					<h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-						labore
-						et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-						nisi
-						ut
-						aliquip ex ea commodo consequat.</p>
-					<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+			<div class="row">
+				<div class="col-12 col-md-6 col-lg-4">
+					<div class="feature">
+						<h3><i class="fas fa-gift d-none d-sm-inline"></i> Feature 1
+							<span class="badge badge-success">NEW!</span></h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+							labore
+							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							nisi
+							ut
+							aliquip ex ea commodo consequat.</p>
+						<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+					</div>
+				</div>
+				<div class="col-12 col-md-6 col-lg-4">
+					<div class="feature">
+						<h3><i class="fas fa-credit-card d-none d-sm-inline"></i> Feature 2</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+							labore
+							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							nisi
+							ut
+							aliquip ex ea commodo consequat.</p>
+						<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+					</div>
+				</div>
+				<div class="col-12 d-md-none d-lg-block col-lg-4">
+					<div class="feature">
+						<h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+							labore
+							et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+							nisi
+							ut
+							aliquip ex ea commodo consequat.</p>
+						<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+					</div>
 				</div>
 			</div>
-			<div class="col-12 d-md-none d-lg-block col-lg-4">
-				<div class="feature">
-					<h3><i class="fas fa-times-circle d-none d-sm-inline"></i> Feature 3</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-						labore
-						et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
-						nisi
-						ut
-						aliquip ex ea commodo consequat.</p>
-					<p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-				</div>
-			</div>
-		</div>
-	</section>	
-    </div>
-    <!-- /.features -->
+		</section>
+	</div>
+	<!-- /.features -->
 
 	<!-- Monthly Favourites -->
 
 	<div class="container favourites-container">
-    <section class="monthly-favourites">
-		<div class="row">
-			<div class="col-12 my-5">
-				<h2 class="text-uppercase">Monthly Favourites:</h2>
+		<section class="monthly-favourites">
+			<div class="row">
+				<div class="col-12 my-5">
+					<h2 class="text-uppercase">Monthly Favourites:</h2>
+				</div>
 			</div>
-		</div>
-		<div class="row">
-			<div class="col-12">
-				<table class="table">
-					<thead>
-						<tr>
-							<th scope="col">Name</th>
-							<th scope="col">Origin</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr>
-							<td>Auchentoshan Three Wood Single Malt Scotch</td>
-							<td>Scotland</td>
-						</tr>
-						<tr>
-							<td>Tomatin Cask-Strength</td>
-							<td>Scotland</td>
-						</tr>
-						<tr>
-							<td>Green Spot Single Pot Irish Still Whiskey</td>
-							<td>Ireland</td>
-						</tr>
-						<tr>
-							<td>Bulleit Bourbon Frontier Whiskey</td>
-							<td>USA</td>
-						</tr>
-						<tr>
-							<td>Penderyn Welsh Malt Whisky</td>
-							<td>Wales</td>
-						</tr>
-					</tbody>
-				</table>
+			<div class="row">
+				<div class="col-12">
+					<table class="table">
+						<thead>
+							<tr>
+								<th scope="col">Name</th>
+								<th scope="col">Origin</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr>
+								<td>Auchentoshan Three Wood Single Malt Scotch</td>
+								<td>Scotland</td>
+							</tr>
+							<tr>
+								<td>Tomatin Cask-Strength</td>
+								<td>Scotland</td>
+							</tr>
+							<tr>
+								<td>Green Spot Single Pot Irish Still Whiskey</td>
+								<td>Ireland</td>
+							</tr>
+							<tr>
+								<td>Bulleit Bourbon Frontier Whiskey</td>
+								<td>USA</td>
+							</tr>
+							<tr>
+								<td>Penderyn Welsh Malt Whisky</td>
+								<td>Wales</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
-		</div>
-	</section>
-    </div>
+		</section>
+	</div>
 	<!-- /.monthly-favourites -->
 
 	<div class="modal" tabindex="-1" role="dialog" id="signUpModal">
